--- a/style.css
+++ b/style.css
@@ -16,11 +16,37 @@ main{
 
 
 .box{
+    position: relative;
     width: 100%;
     max-width: 1020px;
     height: 640px;
     background-color: #fff;
     border-radius: 3.3rem;
-    box-shadow: 0px 60px 40px -30px rgba(0, 0, 0, 0.27);
+    box-shadow: 10px 10px 60px -10px rgba(0, 0, 0, 0.27);
 }
 
+.inner-box{
+    position: absolute;
+    width: calc(100% - 4.1rem);
+    height: calc(100% - 4.1rem);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.forms-wrap{
+    position: absolute;
+    height: 100%;
+    width: 45%;
+    top: 0;
+    left: 0;
+}
+
+.carousel{
+    position: absolute;
+    height: 100%;
+    width: 55%;
+    left: 45%;
+    top: 0;
+    border-radius: 2rem;
+}
