--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+
 *, *::before, *::after{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
+body, input{
+    font-family: "Poppins", sans-serif;
+}
+
 main{
     width: 100%;
     min-height: 100vh;
-    background-color: #e8faff;
+    background-color: aliceblue;
     padding: 2rem;
     display: flex;
     align-items: center;
@@ -49,6 +55,7 @@ main{
     left: 45%;
     top: 0;
     border-radius: 2rem;
+    background-color: aliceblue;
 }
 
 form{
@@ -56,6 +63,9 @@ form{
     width: 100%;
     margin: 0 auto;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .logo{
@@ -64,7 +74,13 @@ form{
 }
 
 .logo img{
-    width: 27px;
+    width: 50px;
     margin: 0.3rem;
 }
 
+.logo h4{
+    font-size: 1.1rem;
+    margin-top: -9px;
+    letter-spacing: -0.5px;
+    color: #151111;
+}
