--- a/style.css
+++ b/style.css
@@ -84,3 +84,57 @@ form{
     letter-spacing: -0.5px;
     color: #151111;
 }
+
+.heading h2{
+    font-size: 2.1rem;
+    font-weight: 600;
+    color: #151111
+}
+
+.heading h6{
+    color: #bababa;
+    font-weight: 400;
+    font-size: 0.75rem;
+    display: inline;
+}
+
+.toggle{
+    color: #151111;
+    text-decoration: none;
+    font-size: 0.75rem;
+    font-weight: 500;
+    transition: 0.3s;
+}
+
+.toggle:hover{
+    color: rgb(52, 137, 212);
+}
+
+.input-wrap{
+    position: relative;
+    height: 37px;
+    margin-bottom: 2rem;
+}
+
+.input-field{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: none;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #bbb;
+    padding: 0;
+    font-size: .95rem;
+    color: #151111;
+}
+
+.label{
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: .95rem;
+    color: #bbb;
+    pointer-events: none;
+}
