--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ form{
     transition: opacity 0.02s 0.4s;
 }
 
-form.signup-form{
+form.sign-up-form{
     opacity: 0;
     pointer-events: none;
 }
