--- a/login-page/src/index.css
+++ b/login-page/src/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
-
+/* 
+- Primary color: aliceblue
+- Secondary color: rgb(172, 216, 255)
+- Hover text: rgb(129, 196, 255)
+- White: #fff
+- Black: #151111   */
 *, 
 *::before, 
 *::after{
@@ -113,7 +118,7 @@ form.sign-up-form{
 }
 
 .toggle:hover{
-    color: rgb(52, 137, 212);
+    color: rgb(129, 196, 255);
 }
 
 .input-wrap{
@@ -171,7 +176,8 @@ label{
 }
 
 .sign-btn:hover{
-    background-color: rgb(52, 137, 212);
+    color: #151111;
+    background-color: rgb(172, 216, 255);
 }
 
 .text{
@@ -185,7 +191,7 @@ label{
 }
 
 .text a:hover{
-    color: rgb(52, 137, 212);
+    color: rgb(129, 196, 255);
 }
 
 main.sign-up-mode form.sign-in-form{
@@ -393,79 +399,3 @@ main.sign-up-mode .carousel{
         padding: 1rem 2rem 1.5rem;
     }
     }
-
-
-    /* Nav bar */
-.navbar-custom {
-    background-color: aliceblue;
-    border-color: aliceblue;
-    box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
-    font: 700 0.875rem/0.875rem "Poppins", sans-serif;
-    transition: all 0.2s;
-}
-
-.navbar-custom .navbar-brand.logo-img img {
-    width: 2.5rem;
-    height: 10%;
-}
-
-.navbar-custom .navbar-brand.logo-text {
-    font: 700 2rem/1rem "Poppins", sans-serif;
-    color: #333;
-    text-decoration: none;
-}
-
-.navbar-custom .navbar-nav {
-    margin-top: 0.75rem;
-    margin-bottom: 0.5rem;
-}
-
-.navbar-custom .nav-item .nav-link {
-    padding: 0.625rem 0.75rem;
-    color: #333;
-    text-decoration: none;
-    transition: all 0.2s ease;
-}
-
-.navbar-custom .nav-item .nav-link:hover,
-.navbar-custom .nav-item .nav-link.active {
-    color: rgb(52, 137, 212);
-}
-
-.navbar-custom .nav-item .btn-outline-sm {
-    margin-top: 0.125rem;
-    margin-bottom: 1.375rem;
-    margin-left: 0.5rem;
-    border: 0.125rem solid rgb(52, 137, 212);
-    color: rgb(52, 137, 212);
-}
-
-.navbar-custom .nav-item .btn-outline-sm:hover {
-    border: 0.125rem solid rgb(52, 137, 212);
-    background-color: rgb(52, 137, 212);
-    color: #fff;
-}
-
-.navbar-custom .navbar-toggler {
-    padding: 0;
-    border: none;
-    color: #333;
-    font-size: 2rem;
-}
-
-.navbar-custom button[aria-expanded='false'] .navbar-toggler-awesome.fas.fa-times{
-	display: none;
-}
-
-.navbar-custom button[aria-expanded='false'] .navbar-toggler-awesome.fas.fa-bars{
-	display: inline-block;
-}
-
-.navbar-custom button[aria-expanded='true'] .navbar-toggler-awesome.fas.fa-bars{
-	display: none;
-}
-
-.navbar-custom button[aria-expanded='true'] .navbar-toggler-awesome.fas.fa-times{
-	display: inline-block;
-	margin-right: 0.125rem;
-}
