--- a/blog/src/components/header/header.css
+++ b/blog/src/components/header/header.css
@@ -1,5 +1,5 @@
 .header{
-    margin-top: 60px;
+    margin-top: 70px;
 }
 .headerTitles{
     display: flex;
@@ -21,6 +21,7 @@
     top: 6.5%;
     font-size: 130px;
     font-family: 'Great Vibes', cursive;
+    margin: 30px;
 }
 
 .headerImg{
