--- a/login-page/src/index.css
+++ b/login-page/src/index.css
@@ -82,6 +82,7 @@ form.sign-up-form{
 .logo{
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .logo img{
@@ -89,8 +90,9 @@ form.sign-up-form{
     margin: 0.3rem;
 }
 
-.logo h4{
-    font-size: 1.5rem;
+.logo .logo-text{
+    text-decoration: none;
+    font-size: 1rem;
     margin-top: 5px;
     letter-spacing: -0.5px;
     color: #151111;
