--- a/blog/src/page/login/login.css
+++ b/blog/src/page/login/login.css
@@ -54,7 +54,7 @@
     position: absolute;
     top: 60px;
     right: 20px;
-    background-color: teal;
+    background-color: #5DA7DB ;
     cursor: pointer;
     padding: 10px;
     border: none;
