--- a/blog/src/page/register/register.css
+++ b/blog/src/page/register/register.css
@@ -1,4 +1,4 @@
-.login {
+.register {
     height: calc(100vh - 50px);
     display: flex;
     flex-direction: column;
@@ -7,34 +7,34 @@
     background-size: cover;
   }
   
-  .loginTitle {
+  .registerTitle {
     font-size: 50px;
   }
   
-  .loginForm {
+  .registerForm {
     margin-top: 20px;
     display: flex;
     flex-direction: column;
   }
   
-  .loginForm > label {
+  .registerForm > label {
     margin: 10px 0;
   }
   
-  .loginInput {
+  .registerInput {
     padding: 10px;
     background-color: white;
     border-radius: 10px;
   }
   
-  .loginInput:focus {
+  .registerInput:focus {
     outline: none;
   }
   
-  .loginButton {
+  .registerButton {
     margin-top: 20px;
     cursor: pointer;
-    background-color: lightcoral;
+    background-color: teal;
     color: white;
     padding: 10px;
     border: none;
@@ -42,11 +42,11 @@
     text-align: center;
   }
   
-  .loginRegisterButton {
+  .registerLoginButton {
     position: absolute;
     top: 60px;
     right: 20px;
-    background-color: teal;
+    background-color: lightcoral;
     cursor: pointer;
     padding: 10px;
     border: none;
