--- a/blog/src/components/topbar/topbar.css
+++ b/blog/src/components/topbar/topbar.css
@@ -1,4 +1,10 @@
+body,
+input {
+  font-family: 'Poppins', sans-serif;
+}
+
 .top {
+  padding-top: 20px;
   width: 100%;
   height: 50px;
   background-color: white;
@@ -7,7 +13,6 @@
   display: flex;
   align-items: center;
   z-index: 999;
-  font-family: "Josefin Sans", sans-serif;
 }
 
 .topLeft,
@@ -61,4 +66,8 @@
   font-size: 18px;
   color: #666;
   cursor: pointer;
+}
+
+.logo img {
+  width: 60px;
 }
