--- a/blog/src/components/sidebar/sidebar.css
+++ b/blog/src/components/sidebar/sidebar.css
@@ -1,64 +1,66 @@
-.sidebar{
-    flex: 5;
+.sidebar {
+    flex: 3;
+    height: fit-content;
     margin: 20px;
     padding-bottom: 30px;
-    background-color:#fdfbfb;
+    background-color: #fdfbfb;
     border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-}
-.sidebarItem {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.sidebarTitle {
+  }
+  
+  .sidebarItem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .sidebarTitle {
     margin: 10px;
     padding: 5px;
     width: 80%;
-    border-top: 1px solid #a7a4a4;
-    border-bottom: 1px solid #a7a4a4;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-top: solid 1px #a7a4a4;
+    border-bottom: solid 1px #a7a4a4;
+    text-align: center;
+    font-family: "Varela Round", sans-serif;
     font-size: 12px;
-    color:#2a1409;
+    line-height: 19px;
+    color: #222222;
     font-weight: 600;
-    line-height: 20px;
-}
-.sidebarItem > img {
+  }
+  
+  .sidebarItem > img {
     margin-top: 15px;
-}
-
-.sidebarItem > p {
+    width: 250px;
+    height: 250px;
+  }
+  
+  .sidebarItem > p {
     padding: 30px;
-}
-
-.sidebarImg{
-    width: 200px;
-    border-radius: 4%;
-    object-fit: cover;
-    cursor: pointer;
-    -webkit-border-radius: 4%;
-    -moz-border-radius: 4%;
-    -ms-border-radius: 4%;
-    -o-border-radius: 4%;
-}
-
-.sidebarList {
-    list-style: none;
+  }
+  
+  .sidebarList {
+    list-style-type: none;
     margin-bottom: 30px;
-}
-
-.sidebarListItem {
+  }
+  
+  .sidebarListItem {
     display: inline-block;
-    width: 70px;
-    margin-top: 5%;
-}
-.sidebarSocial {
-
-}
+    width: 50%;
+    margin-top: 15px;
+    cursor: pointer;
+  }
+  
+  .sidebarSocial {
+    margin-top: 15px;
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .sidebarIcon {
+    font-size: 16px;
+    margin-left: 10px;
+  }
