--- a/blog/src/page/login/login.css
+++ b/blog/src/page/login/login.css
@@ -34,7 +34,7 @@
   .loginButton {
     margin-top: 20px;
     cursor: pointer;
-    background-color: lightcoral;
+    background-color: rgb(0, 0, 0);
     color: white;
     padding: 10px;
     border: none;
